--- a/Image/mmd.yaml
+++ b/Image/mmd.yaml
@@ -1,5 +1,5 @@
 #---------------------------------------------------#
-## 更新：2020-10-10 09:20:37
+## 更新：2020-10-18 09:37:20
 ## 感谢：https://github.com/Hackl0us/SS-Rule-Snippet
 ## 链接：https://sdfjwlkcwoiwefcmslk2csaadskl.xyz/link/aijRKhRzCoiAVHBX?clash=1
 #---------------------------------------------------#
@@ -46,6 +46,7 @@ proxies:
   - {"name":"入门-沪港02|V2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":14455,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-b2s-5.ddns-only.xyz"}}
   - {"name":"入门-台湾01-NF|V2ray","type":"vmess","server":"hinet-142.ddns-only.xyz","port":14601,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"hinet-142.ddns-only.xyz"}}
   - {"name":"入门-台湾02-NF|V2ray","type":"vmess","server":"hinet-143.ddns-only.xyz","port":14602,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"hinet-143.ddns-only.xyz"}}
+  - {"name":"pwzy|V2ray","type":"vmess","server":"149.129.53.255","port":49723,"uuid":"8b3456a7-f92f-4a4b-80e6-69878f5ddf8d","alterId":0,"cipher":"auto","ws-headers":{"Host":"149.129.53.255"}}
 
 proxy-groups:
 -
@@ -64,6 +65,7 @@ proxy-groups:
     - 入门-沪港02|V2ray
     - 入门-台湾01-NF|V2ray
     - 入门-台湾02-NF|V2ray
+    - pwzy|V2ray
 -
   name: Domestic
   type: select
