--- a/Image/mmd.yaml
+++ b/Image/mmd.yaml
@@ -1,5 +1,5 @@
 #---------------------------------------------------#
-## 更新：2020-10-18 09:37:20
+## 更新：2020-10-31 10:42:19
 ## 感谢：https://github.com/Hackl0us/SS-Rule-Snippet
 ## 链接：https://sdfjwlkcwoiwefcmslk2csaadskl.xyz/link/aijRKhRzCoiAVHBX?clash=1
 #---------------------------------------------------#
@@ -35,12 +35,13 @@ secret: ''
 
 proxies:
   - {"name":"入门-日本直连|v2ray","type":"vmess","server":"jp-yh08.ddns-only.xyz","port":10041,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"jp-yh08.ddns-only.xyz"}}
-  - {"name":"入门-新加坡直连01|V2ray","type":"vmess","server":"linode_new3.ddns-only.xyz","port":14222,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"linode_new3.ddns-only.xyz"}}
-  - {"name":"入门-新加坡直连02|V2ray","type":"vmess","server":"linode_new4.ddns-only.xyz","port":14223,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"linode_new4.ddns-only.xyz"}}
+  - {"name":"入门-新加坡直连01|v2ray","type":"vmess","server":"eqiu-sg01.ddns-only.xyz","port":10232,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"eqiu-sg01.ddns-only.xyz"}}
+  - {"name":"入门-鲁新01|v2ray","type":"vmess","server":"xixi-gzyd.ddns-only.xyz","port":10234,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"eqiu-sg02.ddns-only.xyz"}}
+  - {"name":"入门-新加坡直连02|v2ray","type":"vmess","server":"azure-new01.ddns-only.xyz","port":10252,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-new01.ddns-only.xyz"}}
+  - {"name":"入门-沪新01|v2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":10254,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-new02.ddns-only.xyz"}}
   - {"name":"入门-鲁港-NF|V2ray","type":"vmess","server":"xixi-qdyd.ddns-only.xyz","port":10312,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"rc-hgc01.ddns-only.xyz"}}
   - {"name":"入门-香港直连01|V2ray","type":"vmess","server":"az-hk02.ddns-only.xyz","port":11604,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"az-hk02.ddns-only.xyz"}}
   - {"name":"入门-沪俄01|V2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":14407,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"ru-174241.ddns-only.xyz"}}
-  - {"name":"入门-鲁港01-NF|V2ray","type":"vmess","server":"xixi-qdyd.ddns-only.xyz","port":14423,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"hkt-2020221763.ddns-only.xyz"}}
   - {"name":"入门-沪港01|V2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":14433,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-b2s-1.ddns-only.xyz"}}
   - {"name":"入门-沪港03|V2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":14437,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-b2s-3.ddns-only.xyz"}}
   - {"name":"入门-沪港02|V2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":14455,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-b2s-5.ddns-only.xyz"}}
@@ -54,12 +55,13 @@ proxy-groups:
   type: select
   proxies:
     - 入门-日本直连|v2ray
-    - 入门-新加坡直连01|V2ray
-    - 入门-新加坡直连02|V2ray
+    - 入门-新加坡直连01|v2ray
+    - 入门-鲁新01|v2ray
+    - 入门-新加坡直连02|v2ray
+    - 入门-沪新01|v2ray
     - 入门-鲁港-NF|V2ray
     - 入门-香港直连01|V2ray
     - 入门-沪俄01|V2ray
-    - 入门-鲁港01-NF|V2ray
     - 入门-沪港01|V2ray
     - 入门-沪港03|V2ray
     - 入门-沪港02|V2ray
