--- a/Image/mmd.yaml
+++ b/Image/mmd.yaml
@@ -1,5 +1,5 @@
 #---------------------------------------------------#
-## 更新：2020-10-31 11:04:32
+## 更新：2020-11-16 08:29:15
 ## 感谢：https://github.com/Hackl0us/SS-Rule-Snippet
 ## 链接：https://sdfjwlkcwoiwefcmslk2csaadskl.xyz/link/aijRKhRzCoiAVHBX?clash=1
 #---------------------------------------------------#
@@ -40,15 +40,13 @@ proxies:
   - {"name":"入门-新加坡直连02|v2ray","type":"vmess","server":"azure-new01.ddns-only.xyz","port":10252,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-new01.ddns-only.xyz"}}
   - {"name":"入门-沪新01|v2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":10254,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-new02.ddns-only.xyz"}}
   - {"name":"入门-鲁港-NF|V2ray","type":"vmess","server":"xixi-qdyd.ddns-only.xyz","port":10312,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"rc-hgc01.ddns-only.xyz"}}
+  - {"name":"入门-台湾-NF|V2ray","type":"vmess","server":"hinet-128.ddns-only.xyz","port":10402,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"hinet-142.ddns-only.xyz"}}
   - {"name":"入门-香港直连01|V2ray","type":"vmess","server":"az-hk02.ddns-only.xyz","port":11604,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"az-hk02.ddns-only.xyz"}}
   - {"name":"入门-沪俄01|V2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":14407,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"ru-174241.ddns-only.xyz"}}
   - {"name":"入门-沪港01|V2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":14433,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-b2s-1.ddns-only.xyz"}}
   - {"name":"入门-沪港03|V2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":14437,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-b2s-3.ddns-only.xyz"}}
   - {"name":"入门-沪港02|V2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":14455,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-b2s-5.ddns-only.xyz"}}
-  - {"name":"入门-台湾01-NF|V2ray","type":"vmess","server":"hinet-142.ddns-only.xyz","port":14601,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"hinet-142.ddns-only.xyz"}}
-  - {"name":"入门-台湾02-NF|V2ray","type":"vmess","server":"hinet-143.ddns-only.xyz","port":14602,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"hinet-143.ddns-only.xyz"}}
   - {"name":"pwzy|V2ray","type":"vmess","server":"149.129.53.255","port":25977,"uuid":"6bbdbbad-d707-40e4-ab5d-161bc5fdb294","alterId":0,"cipher":"auto","ws-headers":{"Host":"149.129.53.255"}}
-
 proxy-groups:
 -
   name: Proxy
@@ -60,12 +58,12 @@ proxy-groups:
     - 入门-新加坡直连02|v2ray
     - 入门-沪新01|v2ray
     - 入门-鲁港-NF|V2ray
+    - 入门-台湾-NF|V2ray
     - 入门-香港直连01|V2ray
     - 入门-沪俄01|V2ray
     - 入门-沪港01|V2ray
     - 入门-沪港03|V2ray
     - 入门-沪港02|V2ray
-    - 入门-台湾01-NF|V2ray
     - pwzy|V2ray
 -
   name: Domestic
