--- a/Image/mmd.yaml
+++ b/Image/mmd.yaml
@@ -65,7 +65,7 @@ proxies:
   - {"name":"入门-沪港02|V2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":14455,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-b2s-5.ddns-only.xyz"}}
   - {"name":"标准-沪日01-NF|V2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":14465,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"jp-gmo01.ddns-only.xyz"}}
   - {"name":"标准-鲁日02-NF|V2ray","type":"vmess","server":"xixi-qdyd.ddns-only.xyz","port":14467,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"jp-gmo02.ddns-only.xyz"}}
-  - {"name":"pwzy|V2ray","type":"vmess","server":"maodu36.xyz","port":39696,"uuid":"c5fa0903-3028-4346-b8a8-86e529fa307c","alterId":0,"cipher":"auto","ws-headers":{"Host":"maodu36.xyz"}}
+  - {"name":"pwzy|V2ray","type":"vmess","server":"149.129.59.103","port":32179,"uuid":"22f60064-ae6b-48c8-be00-3c96c955af53","alterId":0,"cipher":"auto","ws-headers":{"Host":"149.129.59.103"}}
 
 proxy-groups:
 -
