--- a/Image/mmd.yaml
+++ b/Image/mmd.yaml
@@ -46,7 +46,7 @@ proxies:
   - {"name":"入门-沪港01|V2ray","type":"vmess","server":"azure-b2s-1.ddns-only.xyz","port":14433,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-b2s-1.ddns-only.xyz"}}
   - {"name":"入门-沪港03|V2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":14437,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-b2s-3.ddns-only.xyz"}}
   - {"name":"入门-沪港02|V2ray","type":"vmess","server":"xixi-shlt.ddns-only.xyz","port":14455,"uuid":"c9d690ce-f642-3f5f-a3a1-6be6fc3a1c4d","alterId":2,"cipher":"auto","udp":true,"network":"ws","ws-path":"/yaboviss","ws-headers":{"Host":"azure-b2s-5.ddns-only.xyz"}}
-  - {"name":"pwzy|V2ray","type":"vmess","server":"149.129.60.235","port":36500,"uuid":"17167f8d-3c5e-47a7-8ffd-308ab59e2b3a","alterId":0,"cipher":"auto","ws-headers":{"Host":"149.129.60.235"}}
+  - {"name":"pwzy|V2ray","type":"vmess","server":"maodu36.xyz","port":45739,"uuid":"6696bfb4-de0c-4faa-9c7a-392009b4b3ab","alterId":0,"cipher":"auto","ws-headers":{"Host":"maodu36.xyz"}}
 
 proxy-groups:
 -
